k8s/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mathpuzzle-web
spec:
  template:
    spec:
      containers:
      - name: web
